--- a/portfolio/gt-portfolio-details.html
+++ b/portfolio/gt-portfolio-details.html
@@ -108,7 +108,7 @@
 							<div class="swiper-wrapper align-items-center">
 
 								<div class="swiper-slide">
-									<img src="../assets/Portfolio img/GT img/GUI.png" width="95%" height="40%">
+									<img src="../assets/Portfolio img/GT img/GUI.PNG" width="95%" height="40%">
 								</div>
 
 								<div class="swiper-slide">
