--- a/portfolio/mglcm-portfolio-details.html
+++ b/portfolio/mglcm-portfolio-details.html
@@ -10,8 +10,8 @@
 	<meta content="" name="keywords">
 
 	<!-- Favicons -->
-	<link href="../assets/Portfolio img/MGLCM img/MGLCM_Mean_Contrast.jpg" rel="icon">
-	<link href="../assets/Portfolio img/MGLCM img/MGLCM_Mean_Contrast.jpg" rel="apple-touch-icon">
+	<link href="../assets/Portfolio img/MGLCM img/MGLCM_Mean_Contrast.JPG" rel="icon">
+	<link href="../assets/Portfolio img/MGLCM img/MGLCM_Mean_Contrast.JPG" rel="apple-touch-icon">
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -107,23 +107,23 @@
 							<div class="swiper-wrapper align-items-center">
 
 								<div class="swiper-slide">
-									<img src="../assets/Portfolio img/MGLCM img/Test_Image.jpg" alt="">
+									<img src="../assets/Portfolio img/MGLCM img/Test_Image.JPG" alt="">
 								</div>
 
 								<div class="swiper-slide">
-									<img src="../assets/Portfolio img/MGLCM img/MGLCM_Mean_Contrast.jpg" alt="">
+									<img src="../assets/Portfolio img/MGLCM img/MGLCM_Mean_Contrast.JPG" alt="">
 								</div>
 
 								<div class="swiper-slide">
-									<img src="../assets/Portfolio img/MGLCM img/MGLCM_Mean_Dissimilarity.jpg" alt="">
+									<img src="../assets/Portfolio img/MGLCM img/MGLCM_Mean_Dissimilarity.JPG" alt="">
 								</div>
 
 								<div class="swiper-slide">
-									<img src="../assets/Portfolio img/MGLCM img/MGLCM_Mean_Energy.jpg" alt="">
+									<img src="../assets/Portfolio img/MGLCM img/MGLCM_Mean_Energy.JPG" alt="">
 								</div>
 
 								<div class="swiper-slide">
-									<img src="../assets/Portfolio img/MGLCM img/MGLCM_Mean_Homogeneity.jpg" alt="">
+									<img src="../assets/Portfolio img/MGLCM img/MGLCM_Mean_Homogeneity.JPG" alt="">
 								</div>
 								
 							</div>
