--- a/portfolio/csdsi-portfolio-details.html
+++ b/portfolio/csdsi-portfolio-details.html
@@ -10,8 +10,8 @@
 	<meta content="" name="keywords">
 
 	<!-- Favicons -->
-	<link href="../assets/Portfolio img/CSDSI img/Test_Image.jpg" rel="icon">
-	<link href="../assets/Portfolio img/CSDSI img/Test_Image.jpg" rel="apple-touch-icon">
+	<link href="../assets/Portfolio img/CSDSI img/Test_Image.JPG" rel="icon">
+	<link href="../assets/Portfolio img/CSDSI img/Test_Image.JPG" rel="apple-touch-icon">
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -107,11 +107,11 @@
 							<div class="swiper-wrapper align-items-center">
 
 								<div class="swiper-slide">
-									<img src="../assets/Portfolio img/CSDSI img/Test_Image.jpg" alt="">
+									<img src="../assets/Portfolio img/CSDSI img/Test_Image.JPG" alt="">
 								</div>
 
 								<div class="swiper-slide">
-									<img src="../assets/Portfolio img/CSDSI img/Cloud_Mask_Image.jpg" alt="">
+									<img src="../assets/Portfolio img/CSDSI img/Cloud_Mask_Image.JPG" alt="">
 								</div>
 								
 							</div>
