--- a/portfolio/mbi-portfolio-details.html
+++ b/portfolio/mbi-portfolio-details.html
@@ -10,8 +10,8 @@
 	<meta content="" name="keywords">
 
 	<!-- Favicons -->
-	<link href="../assets/Portfolio img/MBI img/MBI_T5.jpg" rel="icon">
-	<link href="../assets/Portfolio img/MBI img/MBI_T5.jpg" rel="apple-touch-icon">
+	<link href="../assets/Portfolio img/MBI img/MBI_T5.JPG" rel="icon">
+	<link href="../assets/Portfolio img/MBI img/MBI_T5.JPG" rel="apple-touch-icon">
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -111,11 +111,11 @@
 								</div>
 
 								<div class="swiper-slide">
-									<img src="../assets/Portfolio img/MBI img/MBI_T5.jpg" alt="">
+									<img src="../assets/Portfolio img/MBI img/MBI_T5.JPG" alt="">
 								</div>
 								
 								<div class="swiper-slide">
-									<img src="../assets/Portfolio img/MBI img/MSI_T5.jpg" alt="">
+									<img src="../assets/Portfolio img/MBI img/MSI_T5.JPG" alt="">
 								</div>
 								
 							</div>
