--- a/portfolio/pantex-portfolio-details.html
+++ b/portfolio/pantex-portfolio-details.html
@@ -10,8 +10,8 @@
 	<meta content="" name="keywords">
 
 	<!-- Favicons -->
-	<link href="../assets/Portfolio img/PanTex img/PanTex.jpg" rel="icon">
-	<link href="../assets/Portfolio img/PanTex img/PanTex.jpg" rel="apple-touch-icon">
+	<link href="../assets/Portfolio img/PanTex img/PanTex.JPG" rel="icon">
+	<link href="../assets/Portfolio img/PanTex img/PanTex.JPG" rel="apple-touch-icon">
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -107,17 +107,12 @@
 							<div class="swiper-wrapper align-items-center">
 
 								<div class="swiper-slide">
-									<img src="../assets/Portfolio img/PanTex img/PanTex Test.jpg" alt="">
+									<img src="../assets/Portfolio img/PanTex img/PanTex Test.JPG" alt="">
 								</div>
 
 								<div class="swiper-slide">
-									<img src="../assets/Portfolio img/PanTex img/PanTex.jpg" alt="">
+									<img src="../assets/Portfolio img/PanTex img/PanTex.JPG" alt="">
 								</div>
-								<!--
-								<div class="swiper-slide">
-									<img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
-								</div>
-								-->
 							</div>
 							<div class="swiper-pagination"></div>
 						</div>
