--- a/index.html
+++ b/index.html
@@ -230,16 +230,16 @@
 							<p><em>LaunchPad @ One-North, Singapore / 纬壹, 新加坡</em></p>
 							<br>
 							<ul>
-								<li>Development of eye monitoring software from scratch through to Proof-of-Concept (POC) phase</li>
-								<li>Development of web-based eye monitoring software as telemedicine service</li>
-								<li>Development of POC webcam-based eye gaze estimation system</li>
-								<li>Development of POC face recognition system as online authentication protocol for web-based eye monitoring software</li>
+								<li>Development of eye monitoring software from scratch through to Proof-of-Concept (POC) phase for demonstration to stakeholders and investors</li>
+								<li>Development of web-based eye monitoring software as telemedicine service to capture a larger share of the market</li>
+								<li>Development of POC webcam-based eye gaze estimation system which reduces the estimated product cost by approximately 80%</li>
+								<li>Development of POC face recognition system as online authentication protocol for web-based eye monitoring software to improve user experience and save on third-party related costs</li>
 								<li>Development of POC Presentation Attack Detection system to augment face recognition system</li>
 								<br>
-								<li>从零开始开发眼球监测软件，直至概念验证阶段</li>
-								<li>开发了以远程医疗服务为基础的网络版眼球监测软件</li>
-								<li>开发了实验性摄像头影像的眼球追踪加屏幕凝视点估计系统</li>
-								<li>开发了实验性面部识别系统以为网络版眼球监测软件提供更安全的在线身份验证</li>
+								<li>从零开始开发眼球监测软件，直至概念验证阶段以便于为相关利益者或投资者做示范</li>
+								<li>开发了以远程医疗服务为基础的网络版眼球监测软件以开拓更大的市场</li>
+								<li>开发了实验性摄像头影像的眼球追踪加屏幕凝视点估计系统，从而把预计的产品成本降低约百分之八十</li>
+								<li>开发了实验性面部识别系统以为网络版眼球监测软件提供更安全的在线身份验证以改善用户体验并节省第三方相关成本</li>
 								<li>开发了实验性演示攻击检测系统以巩固面部识别系统的安全性</li>
 							</ul>
 						</div>
@@ -250,7 +250,7 @@
 							<p><em>The Galen, Science Park II, Singapore / 科学园第二区, 新加坡</em></p>
 							<br>
 							<ul>
-								<li>R&D in the field of remote sensing / 遥感领域研发项目</li>
+								<li>R&D in the field of remote sensing to boost the company's competitivity / 遥感领域研发项目以提升公司的竞争力</li>
 								<ul>
 									<li>Detection of new built-up areas in a particular region over time using very high-resolution optical satellite images</li>
 									<li>Semantic segmentation of buildings from very high-resolution optical satellite images</li>
