--- a/index.html
+++ b/index.html
@@ -549,9 +549,9 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-competition">
 						<div class="portfolio-wrap">
-							<img src="assets/Portfolio img/DR img/DR.gif" class="img-fluid" alt="">
+							<img src="assets/Portfolio img/DR img/2fde69f20585.png" class="img-fluid" alt="">
 							<div class="portfolio-links">
-								<a href="assets/Portfolio img/DR img/DR.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Kaggle Diabetric Retinopathy Classification Challenge / Kaggle 糖尿病视网膜病变 (DR) 分类挑战"><i class="bx bx-plus"></i></a>
+								<a href="assets/Portfolio img/DR img/2fde69f20585.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Kaggle Diabetric Retinopathy Classification Challenge / Kaggle 糖尿病视网膜病变 (DR) 分类挑战"><i class="bx bx-plus"></i></a>
 								<a href="portfolio/dr-portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
 							</div>
 						</div>
