--- a/index.html
+++ b/index.html
@@ -231,12 +231,14 @@
 							<br>
 							<ul>
 								<li>Development of eye monitoring software from scratch through to Proof-of-Concept (POC) phase for demonstration to stakeholders and investors</li>
+								<li>Design and implementation of algorithm for eye test component of web-based eye monitoring software to expand suite of services available for consumers</li>
 								<li>Development of web-based eye monitoring software as telemedicine service to capture a larger share of the market</li>
 								<li>Development of POC webcam-based eye gaze estimation system which reduces the estimated product cost by approximately 80%</li>
 								<li>Development of POC face recognition system as online authentication protocol for web-based eye monitoring software to improve user experience and save on third-party related costs</li>
 								<li>Development of POC Presentation Attack Detection system to augment face recognition system</li>
 								<br>
 								<li>从零开始开发眼球监测软件，直至概念验证阶段以便于为相关利益者或投资者做示范</li>
+								<li>设计并实现网络版眼球监测软件眼睛测试部分的算法，以扩展为消费者提供的服务套件</li>
 								<li>开发了以远程医疗服务为基础的网络版眼球监测软件以开拓更大的市场</li>
 								<li>开发了实验性摄像头影像的眼球追踪加屏幕凝视点估计系统，从而把预计的产品成本降低约百分之八十</li>
 								<li>开发了实验性面部识别系统以为网络版眼球监测软件提供更安全的在线身份验证以改善用户体验并节省第三方相关成本</li>
