--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 						</div>
 					</div>
 
-					<div class="col-lg-4 col-md-6 portfolio-item filter-personal">
+					<div class="col-lg-4 col-md-6 portfolio-item filter-work">
 						<div class="portfolio-wrap">
 							<img src="assets/Portfolio img/MFBI img/MMFBI.gif" class="img-fluid" alt="">
 							<div class="portfolio-links">
@@ -509,7 +509,7 @@
 						</div>
 					</div>
 					
-					<div class="col-lg-4 col-md-6 portfolio-item filter-personal">
+					<div class="col-lg-4 col-md-6 portfolio-item filter-work">
 						<div class="portfolio-wrap">
 							<img src="assets/Portfolio img/MGLCM img/MGLCM.gif" class="img-fluid" alt="">
 							<div class="portfolio-links">
@@ -519,7 +519,7 @@
 						</div>
 					</div>
 					
-					<div class="col-lg-4 col-md-6 portfolio-item filter-personal">
+					<div class="col-lg-4 col-md-6 portfolio-item filter-work">
 						<div class="portfolio-wrap">
 							<img src="assets/Portfolio img/MST img/MST.gif" class="img-fluid" alt="">
 							<div class="portfolio-links">
