Updated Reference format

--- a/portfolio/dr-portfolio-details.html
+++ b/portfolio/dr-portfolio-details.html
@@ -154,7 +154,8 @@
 
 			</div>
 			<br>
-			<p style='margin-left: 1%;'>Eric Li. (2023). Diabetic Retinopathy Classification F1 Score #4. Kaggle. https://kaggle.com/competitions/diabetic-retinopathy-classification-f1-score-4</p>
+			<p style='margin-left: 1%;'><strong>Reference</strong></p>
+			<p style='margin-left: 1%;'>[1]&emsp;Eric Li. (2023). Diabetic Retinopathy Classification F1 Score #4. Kaggle. https://kaggle.com/competitions/diabetic-retinopathy-classification-f1-score-4</p>
 		</section><!-- End Portfolio Details Section -->
 
 	</main><!-- End #main -->
