--- a/portfolio/jointnet-portfolio-details.html
+++ b/portfolio/jointnet-portfolio-details.html
@@ -159,7 +159,8 @@
 
 			</div>
 			<br>
-			<p style='margin-left: 1%;'>Zhang Z, Wang Y. JointNet: A Common Neural Network for Road and Building Extraction. Remote Sensing. 2019; 11(6):696. https://doi.org/10.3390/rs11060696</p>
+			<p style='margin-left: 1%;'><strong>Reference</strong></p>
+			<p style='margin-left: 1%;'>[1]&emsp;Zhang Z, Wang Y. JointNet: A Common Neural Network for Road and Building Extraction. Remote Sensing. 2019; 11(6):696. https://doi.org/10.3390/rs11060696</p>
 		</section><!-- End Portfolio Details Section -->
 
 	</main><!-- End #main -->
