--- a/portfolio/mbi-portfolio-details.html
+++ b/portfolio/mbi-portfolio-details.html
@@ -142,7 +142,8 @@
 
 			</div>
 			<br>
-			<p style='margin-left: 1%;'>X. Huang and L. Zhang, "Morphological Building/Shadow Index for Building Extraction From High-Resolution Imagery Over Urban Areas," in IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing, vol. 5, no. 1, pp. 161-172, Feb. 2012, doi: 10.1109/JSTARS.2011.2168195.</p>
+			<p style='margin-left: 1%;'><strong>Reference</strong></p>
+			<p style='margin-left: 1%;'>[1]&emsp;X. Huang and L. Zhang, "Morphological Building/Shadow Index for Building Extraction From High-Resolution Imagery Over Urban Areas," in IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing, vol. 5, no. 1, pp. 161-172, Feb. 2012, doi: 10.1109/JSTARS.2011.2168195.</p>
 		</section><!-- End Portfolio Details Section -->
 
 	</main><!-- End #main -->
