--- a/portfolio/mglcm-portfolio-details.html
+++ b/portfolio/mglcm-portfolio-details.html
@@ -152,7 +152,8 @@
 
 			</div>
 			<br>
-			<p style='margin-left: 1%;'>Huang X, Liu X, Zhang L. A Multichannel Gray Level Co-Occurrence Matrix for Multi/Hyperspectral Image Texture Representation. Remote Sensing. 2014; 6(9):8424-8445. https://doi.org/10.3390/rs6098424</p>
+			<p style='margin-left: 1%;'><strong>Reference</strong></p>
+			<p style='margin-left: 1%;'>[1]&emsp;Huang X, Liu X, Zhang L. A Multichannel Gray Level Co-Occurrence Matrix for Multi/Hyperspectral Image Texture Representation. Remote Sensing. 2014; 6(9):8424-8445. https://doi.org/10.3390/rs6098424</p>
 		</section><!-- End Portfolio Details Section -->
 
 	</main><!-- End #main -->
