--- a/portfolio/mst-portfolio-details.html
+++ b/portfolio/mst-portfolio-details.html
@@ -144,7 +144,8 @@
 
 			</div>
 			<br>
-			<p style='margin-left: 1%;'>Warner, T. A., & Lee, J. Y. (2011). Spatial context-dependent multi-scale and directional image texture. International journal of remote sensing, 32(17), 4787-4806.</p>
+			<p style='margin-left: 1%;'><strong>Reference</strong></p>
+			<p style='margin-left: 1%;'>[1]&emsp;Warner, T. A., & Lee, J. Y. (2011). Spatial context-dependent multi-scale and directional image texture. International journal of remote sensing, 32(17), 4787-4806.</p>
 		</section><!-- End Portfolio Details Section -->
 
 	</main><!-- End #main -->
