--- a/portfolio/csdsi-portfolio-details.html
+++ b/portfolio/csdsi-portfolio-details.html
@@ -140,7 +140,8 @@
 
 			</div>
 			<br>
-			<p style='margin-left: 1%;'>Zhai, H., Zhang, H., Zhang, L., & Li, P. (2018). Cloud/shadow detection based on spectral indices for multi/hyperspectral optical remote sensing imagery. ISPRS journal of photogrammetry and remote sensing, 144, 235-253.</p>
+			<p style='margin-left: 1%;'><strong>Reference</strong></p>
+			<p style='margin-left: 1%;'>[1]&emsp;Zhai, H., Zhang, H., Zhang, L., & Li, P. (2018). Cloud/shadow detection based on spectral indices for multi/hyperspectral optical remote sensing imagery. ISPRS journal of photogrammetry and remote sensing, 144, 235-253.</p>
 		</section><!-- End Portfolio Details Section -->
 
 	</main><!-- End #main -->
