--- a/portfolio/dc-portfolio-details.html
+++ b/portfolio/dc-portfolio-details.html
@@ -148,7 +148,8 @@
 
 			</div>
 			<br>
-			<p style='margin-left: 1%;'>Chen, J., & Tsang, E. P. (2020). Detecting regime change in computational finance: data science, machine learning and algorithmic trading. CRC press.</p>
+			<p style='margin-left: 1%;'><strong>Reference</strong></p>
+			<p style='margin-left: 1%;'>[1]&emsp;Chen, J., & Tsang, E. P. (2020). Detecting regime change in computational finance: data science, machine learning and algorithmic trading. CRC press.</p>
 		</section><!-- End Portfolio Details Section -->
 
 	</main><!-- End #main -->
