--- a/portfolio/low-light-portfolio-details.html
+++ b/portfolio/low-light-portfolio-details.html
@@ -152,8 +152,9 @@
 
 			</div>
 			<br>
-			<p style='margin-left: 1%;'>Pavan, A. C., Lakshmi, S., & MT, S. (2023). An Improved Method for Reconstruction and Enhancing Dark Images based on CLAHE. International Research Journal on Advanced Science Hub, 5(02).</p>
-			<p style='margin-left: 1%;'>Wang, W., Chen, Z., Yuan, X., & Wu, X. (2019). Adaptive image enhancement method for correcting low-illumination images. Information Sciences, 496, 25-41.</p>
+			<p style='margin-left: 1%;'><strong>Reference</strong></p>
+			<p style='margin-left: 1%;'>[1]&emsp;Pavan, A. C., Lakshmi, S., & MT, S. (2023). An Improved Method for Reconstruction and Enhancing Dark Images based on CLAHE. International Research Journal on Advanced Science Hub, 5(02).</p>
+			<p style='margin-left: 1%;'>[2]&emsp;Wang, W., Chen, Z., Yuan, X., & Wu, X. (2019). Adaptive image enhancement method for correcting low-illumination images. Information Sciences, 496, 25-41.</p>
 
 		</section><!-- End Portfolio Details Section -->
 
