--- a/portfolio/mfbi-portfolio-details.html
+++ b/portfolio/mfbi-portfolio-details.html
@@ -148,7 +148,8 @@
 
 			</div>
 			<br>
-			<p style='margin-left: 1%;'>Bi, Q., Qin, K., Zhang, H., Zhang, Y., Li, Z., & Xu, K. (2019). A multi-scale filtering building index for building extraction in very high-resolution satellite imagery. Remote Sensing, 11(5), 482.</p>
+			<p style='margin-left: 1%;'><strong>Reference</strong></p>
+			<p style='margin-left: 1%;'>[1]&emsp;Bi, Q., Qin, K., Zhang, H., Zhang, Y., Li, Z., & Xu, K. (2019). A multi-scale filtering building index for building extraction in very high-resolution satellite imagery. Remote Sensing, 11(5), 482.</p>
 		</section><!-- End Portfolio Details Section -->
 
 	</main><!-- End #main -->
