--- a/portfolio/pantex-portfolio-details.html
+++ b/portfolio/pantex-portfolio-details.html
@@ -137,7 +137,8 @@
 
 			</div>
 			<br>
-			<p style='margin-left: 1%;'>Pesaresi, M., Gerhardinger, A., & Kayitakire, F. (2008). A robust built-up area presence index by anisotropic rotation-invariant textural measure. IEEE Journal of selected topics in applied earth observations and remote sensing, 1(3), 180-192.</p>
+			<p style='margin-left: 1%;'><strong>Reference</strong></p>
+			<p style='margin-left: 1%;'>[1]&emsp;Pesaresi, M., Gerhardinger, A., & Kayitakire, F. (2008). A robust built-up area presence index by anisotropic rotation-invariant textural measure. IEEE Journal of selected topics in applied earth observations and remote sensing, 1(3), 180-192.</p>
 		</section><!-- End Portfolio Details Section -->
 
 	</main><!-- End #main -->
