--- a/portfolio/sd-portfolio-details.html
+++ b/portfolio/sd-portfolio-details.html
@@ -153,7 +153,8 @@
 
 			</div>
 			<br>
-			<p style='margin-left: 1%;'>Silva, G. F., Carneiro, G. B., Doth, R., Amaral, L. A., & de Azevedo, D. F. (2018). Near real-time shadow detection and removal in aerial motion imagery application. ISPRS Journal of photogrammetry and remote sensing, 140, 104-121.</p>
+			<p style='margin-left: 1%;'><strong>Reference</strong></p>
+			<p style='margin-left: 1%;'>[1]&emsp;Silva, G. F., Carneiro, G. B., Doth, R., Amaral, L. A., & de Azevedo, D. F. (2018). Near real-time shadow detection and removal in aerial motion imagery application. ISPRS Journal of photogrammetry and remote sensing, 140, 104-121.</p>
 		</section><!-- End Portfolio Details Section -->
 
 	</main><!-- End #main -->
