Added Economic Calendar Widget

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 					<li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume / 简历</span></a></li>
 					<li><a href="#skills" class="nav-link scrollto"><i class="bx bx-carousel"></i> <span>Skills / 技能</span></a></li>
 					<li><a href="#projects" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects / 项目</span></a></li>
+					<li><a href="#economy" class="nav-link scrollto"><i class="bx bx-money"></i> <span>Economic Calendar / 金融日志</span></a></li>
 					<!--
 					<li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
 					<li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact / 联系</span></a></li>
@@ -97,7 +98,7 @@
 			<br>
 			<h1>王惟弘</h1>
 			<br>
-			<p>I am a <span class="typed" data-typed-items="Data Scientist in-the-making, Computer Vision enthusiast, Software Engineer who does it all"></span></p>
+			<p>I am a <span class="typed" data-typed-items="Data Scientist in-the-making, Software Engineer who does it all"></span></p>
 		</div>
 	</section><!-- End Hero -->
 
@@ -116,7 +117,7 @@
 						<img src="assets/img/Thomas Wang Wei Hong Alt.jpg" class="img-fluid" alt="">
 					</div>
 					<div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-						<h3>Software Engineer (软件工程师) / Computer Vision Enthusiast (计算机视觉爱好者)</h3>
+						<h3>Software Engineer (软件工程师) / Data Scientist (数据科学家)</h3>
 						<br>
 						<!--
 						<p class="fst-italic">
@@ -146,10 +147,10 @@
 						</div>
 						<br>
 						<p>I am <strong>Thomas Wang Wei Hong</strong>, a dedicated <span class="secondary-emphasis">software engineer</span> with a penchant for pushing boundaries and exploring the unknown. I have been developing <span class="secondary-emphasis">proof-of-concept software</span>, and engaged in <strong>Research and Development (R&D)</strong> work in the field of <strong>computer vision</strong>.<br><br>
-						I am currently pursuing a <strong>Master of Science in Data Science and Machine Learning (MSc in DSML)</strong> degree at the <strong>National University of Singapore</strong> to further solidify my knowledge in the realm of <span class="secondary-emphasis">data science</span> and <span class="secondary-emphasis">computer vision</span>, which will open up avenues of innovation and research that I am eager to explore.<br><br>
+						I am currently pursuing a <strong>Master of Science in Data Science and Machine Learning (MSc in DSML)</strong> degree at the <strong>National University of Singapore</strong> to further solidify my knowledge in the realm of <span class="secondary-emphasis">data science</span>, which will open up avenues of innovation and research that I am eager to explore.<br><br>
 						You can find me blazing down the off-road tracks of <span class="secondary-emphasis">Chestnut Nature Park</span> on my old but trusty mountain bike, or battling the heat and conquering the trails of <span class="secondary-emphasis">MacRitchie Reservoir Park</span>.</p>
 						<br>
-						<p>我是王惟弘，一名致力于探索未知的软件工程师。我热衷于开发应用软件，并在计算机视觉领域从事研究和开发（R&D）工作。 我目前正在新加坡国立大学攻读数据科学和机器学习的硕士学位（MSc in DSML），以进一步巩固我在数据科学和计算机视觉领域的知识。 这将为我打开一条我很期待探索的创新和研究的新途径。 你可以在策士纳自然公园的越野轨道上一睹我骑着那旧而可靠的山地自行车飞驰的英姿，或是在炎热的天气下征服麦里芝蓄水池的丛林小路。</p>
+						<p>我是王惟弘，一名致力于探索未知的软件工程师。我热衷于开发应用软件，并在计算机视觉领域从事研究和开发（R&D）工作。 我目前正在新加坡国立大学攻读数据科学和机器学习的硕士学位（MSc in DSML），以进一步巩固我在数据科学领域的知识。 这将为我打开一条我很期待探索的创新和研究的新途径。 你可以在策士纳自然公园的越野轨道上一睹我骑着那旧而可靠的山地自行车飞驰的英姿，或是在炎热的天气下征服麦里芝蓄水池的丛林小路。</p>
 					</div>
 				</div>
 
@@ -592,6 +593,32 @@
 
 			</div>
 		</section><!-- End Portfolio Section -->
+
+		<section id="economy" class="section-bg">
+			<div class="container">
+
+				<div class="section-title">
+					<h2>Economic Calendar / 金融日志</h2>
+				</div>
+
+				<div class="row" data-aos="fade-up">
+					<div id="economicCalendarWidget"></div>
+					<script async type="text/javascript" data-type="calendar-widget" src="https://www.tradays.com/c/js/widgets/calendar/widget.js?v=13">
+					  {"width":"100%","height":"100%","mode":"2","lang":"en"}
+					</script>
+				</div>
+
+				<br>
+
+				<div class="row" data-aos="fade-up">
+					<div id="economicCalendarWidget"></div>
+					<script async type="text/javascript" data-type="calendar-widget" src="https://www.tradays.com/c/js/widgets/calendar/widget.js?v=13">
+					  {"width":"100%","height":"100%","mode":"2","lang":"zh"}
+					</script>
+				</div>
+
+			</div>
+		</section>
 
 		<!-- ======= Services Section ======= -->
 		<!--
