--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					<li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume / 简历</span></a></li>
 					<li><a href="#skills" class="nav-link scrollto"><i class="bx bx-carousel"></i> <span>Skills / 技能</span></a></li>
 					<li><a href="#projects" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects / 项目</span></a></li>
-					<li><a href="#economy" class="nav-link scrollto"><i class="bx bx-money"></i> <span>Economic Calendar / 金融日志</span></a></li>
+					<li><a href="#economy" class="nav-link scrollto"><i class="bx bx-money"></i> <span>Economic Matters / 金融事务</span></a></li>
 					<!--
 					<li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
 					<li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact / 联系</span></a></li>
@@ -598,21 +598,35 @@
 			<div class="container">
 
 				<div class="section-title">
-					<h2>Economic Calendar / 金融日志</h2>
+					<h2>Economic Matter / 金融事务</h2>
 				</div>
 
-				<div class="row" data-aos="fade-up">
+				<div class="row">
+					<h3>Economic Calendar</h3>
 					<div id="economicCalendarWidget"></div>
 					<script async type="text/javascript" data-type="calendar-widget" src="https://www.tradays.com/c/js/widgets/calendar/widget.js?v=13">
 					  {"width":"100%","height":"300%","mode":"2","lang":"en"}
 					</script>
 				</div>
-				<br>
-				<br>
-				<div class="row" data-aos="fade-up">
+				<div class="row">
+					<h3>金融日志</h3>
 					<div id="economicCalendarWidget"></div>
 					<script async type="text/javascript" data-type="calendar-widget" src="https://www.tradays.com/c/js/widgets/calendar/widget.js?v=13">
 					  {"width":"100%","height":"300%","mode":"2","lang":"zh"}
+					</script>
+				</div>
+				<div class="row">
+					<h3>Forex Symbols Table</h3>
+					<div id="quotesWidgetOverview"></div>
+					<script async type="text/javascript" data-type="quotes-widget" src="https://c.mql5.com/js/widgets/quotes/widget.js?v=1">
+					  {"type":"overview","style":"tiles","filter":["EURUSD","USDJPY","GBPUSD","AUDUSD","USDCAD","USDCHF","NZDUSD"],"width":"100%","height":"100%","period":"M1","lang":"en","id":"quotesWidgetOverview"}
+					</script>
+				</div>
+				<div class="row">
+					<h3>外汇符号表</h3>
+					<div id="quotesWidgetOverview"></div>
+					<script async type="text/javascript" data-type="quotes-widget" src="https://c.mql5.com/js/widgets/quotes/widget.js?v=1">
+					  {"type":"overview","style":"tiles","filter":["EURUSD","USDJPY","GBPUSD","AUDUSD","USDCAD","USDCHF","NZDUSD"],"width":"100%","height":"100%","period":"M1","lang":"zh","id":"quotesWidgetOverview"}
 					</script>
 				</div>
 
