Update Economic Matter Section

--- a/index.html
+++ b/index.html
@@ -602,31 +602,18 @@
 				</div>
 
 				<div class="row">
-					<h3>Economic Calendar</h3>
+					<h3>Economic Calendar / 金融日志</h3>
 					<div id="economicCalendarWidget"></div>
 					<script async type="text/javascript" data-type="calendar-widget" src="https://www.tradays.com/c/js/widgets/calendar/widget.js?v=13">
-					  {"width":"100%","height":"300%","mode":"2","lang":"en"}
+					  {"width":"100%","height":"300%","mode":"2"}
 					</script>
 				</div>
+				
 				<div class="row">
-					<h3>金融日志</h3>
-					<div id="economicCalendarWidget"></div>
-					<script async type="text/javascript" data-type="calendar-widget" src="https://www.tradays.com/c/js/widgets/calendar/widget.js?v=13">
-					  {"width":"100%","height":"300%","mode":"2","lang":"zh"}
-					</script>
-				</div>
-				<div class="row">
-					<h3>Forex Symbols Table</h3>
+					<h3>Forex Symbols Table / 外汇符号表</h3>
 					<div id="quotesWidgetOverview"></div>
 					<script async type="text/javascript" data-type="quotes-widget" src="https://c.mql5.com/js/widgets/quotes/widget.js?v=1">
-					  {"type":"overview","style":"tiles","filter":["EURUSD","USDJPY","GBPUSD","AUDUSD","USDCAD","USDCHF","NZDUSD"],"width":"100%","height":"100%","period":"M1","lang":"en","id":"quotesWidgetOverview"}
-					</script>
-				</div>
-				<div class="row">
-					<h3>外汇符号表</h3>
-					<div id="quotesWidgetOverview"></div>
-					<script async type="text/javascript" data-type="quotes-widget" src="https://c.mql5.com/js/widgets/quotes/widget.js?v=1">
-					  {"type":"overview","style":"tiles","filter":["EURUSD","USDJPY","GBPUSD","AUDUSD","USDCAD","USDCHF","NZDUSD"],"width":"100%","height":"100%","period":"M1","lang":"zh","id":"quotesWidgetOverview"}
+					  {"type":"overview","style":"tiles","filter":["EURUSD","USDJPY","GBPUSD","AUDUSD","USDCAD","USDCHF","NZDUSD"],"width":"100%","height":"100%","period":"M1","id":"quotesWidgetOverview"}
 					</script>
 				</div>
 
