--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
 						<h3 class="resume-title">Professional Experience / 专业经验</h3>
 						<div class="resume-item">
-							<h4>Software Engineer / 软件工程师</h4>
+							<h4>AI/ML Software Engineer / 人工智能-机器学习软件工程师</h4>
 							<h5>2020 - 2023</h5>
 							<p><em><img src='assets/img/Occutrack Logo.png' style='width: 50%; height: 50%;'>&nbsp;&nbsp;Occutrack Medical Solutions Pte Ltd</em></p>
 							<p><em>LaunchPad @ One-North, Singapore / 纬壹, 新加坡</em></p>
