Added MSc e-Certificate Link

--- a/index.html
+++ b/index.html
@@ -279,6 +279,9 @@
 							<h4>Master of Science in Data Science and Machine Learning / 数据科学与机器学习硕士</h4>
 							<h5>2022 - 2024</h5>
 							<p><em><img src='assets/img/NUS Logo.png' style='width: 8%; height: 8%;'>&nbsp;&nbsp;National University of Singapore, Singapore / 新加坡国立大学, 新加坡</em></p>
+							<ul>
+								<li><a href = "https://www.opencerts.io/?q=%7B%22type%22%3A%22DOCUMENT%22%2C%22payload%22%3A%7B%22uri%22%3A%22https%3A%2F%2Fraw.githubusercontent.com%2FThomasWangWeiHong%2Fthomaswangweihong.github.io%2Fmain%2Fassets%2FNUS%2520Master%2520(Redacted-Encrypted)%2520OpenCert.opencert%22%7D%7D#%7B%22key%22%3A%228501d4bd57df15a88806184434d5f9175ddd4b32c88918e08bbf08bc5285cac5%22%7D">e-Certificate/Transcript</a></li>
+							</ul>	
 						</div>
 						<div class="resume-item">
 							<h4>Bachelor of Engineering (Environmental Engineering) with Honours (Highest Distinction) / 工程学士（环境工程）荣誉学位（最高荣誉)</h4>
