--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<title>Thomas Wang's Portfolio</title>
+	<title>Thomas Wang Wei Hong</title>
 	<meta content="" name="description">
 	<meta content="" name="keywords">
 
