Update Education Details

--- a/index.html
+++ b/index.html
@@ -294,6 +294,29 @@
 								<li><a href = "https://www.opencerts.io/?q=%7B%22type%22%3A%22DOCUMENT%22%2C%22payload%22%3A%7B%22uri%22%3A%22https%3A%2F%2Fraw.githubusercontent.com%2FThomasWangWeiHong%2Fthomaswangweihong.github.io%2Fmain%2Fassets%2FNUS%2520Bachelor%2520(Redacted-Encrypted)%2520OpenCert.opencert%22%7D%7D#%7B%22key%22%3A%22d5eda0298c7a353bdd811aa5f67d968b91f16ebee3fb016facc1d610180084ce%22%7D">e-Certificate (Transcript) / 电子证书</a></li>
 							</ul>
 						</div>
+						<div class="resume-item">
+							<h4>Singapore-Cambridge General Certificate of Education Advanced Level / 新加坡-剑桥普通教育证书高级水平</h4>
+							<h5>2009 - 2010</h5>
+							<p><em><img src='assets/img/NYJC Logo.jpg' style='width: 8%; height: 8%;'>&nbsp;&nbsp;Nanyang Junior College, Singapore / 南洋初级学院, 新加坡</em></p>
+							<ul>
+								<li><a href = "https://www.opencerts.io/?q=%7B%22type%22%3A%22DOCUMENT%22%2C%22payload%22%3A%7B%22uri%22%3A%22https%3A%2F%2Fraw.githubusercontent.com%2FThomasWangWeiHong%2Fthomaswangweihong.github.io%2Fmain%2Fassets%2FA%2520-%2520Level%25202010%2520(Redacted-Encrypted)%2520OpenCert.opencert%22%7D%7D#%7B%22key%22%3A%2209f9557828cb36ae697925629f625d76c41835f8481b715e73a98ca9e2d53cfa%22%7D">2010 e-Certificate (Transcript) / 2010 电子证书</a></li>
+								<li><a href = "https://www.opencerts.io/?q=%7B%22type%22%3A%22DOCUMENT%22%2C%22payload%22%3A%7B%22uri%22%3A%22https%3A%2F%2Fraw.githubusercontent.com%2FThomasWangWeiHong%2Fthomaswangweihong.github.io%2Fmain%2Fassets%2FA%2520-%2520Level%25202009%2520(Redacted-Encrypted)%2520OpenCert.opencert%22%7D%7D#%7B%22key%22%3A%22e0cb52277e4ba95f8702e5f6e7eb904a07d15a62e8dbde788b646c6612ca0902%22%7D">2009 e-Certificate (Transcript) / 2009 电子证书</a></li>
+							</ul>	
+						</div>
+						<div class="resume-item">
+							<h4>Singapore-Cambridge General Certificate of Education Ordinary Level / 新加坡-剑桥普通教育证书普通水平</h4>
+							<h5>2005 - 2008</h5>
+							<p><em><img src='assets/img/OPSS Logo.jpg' style='width: 8%; height: 8%;'>&nbsp;&nbsp;Orchid Park Secondary School, Singapore / 兰景中学, 新加坡</em></p>
+							<ul>
+								<li><a href = "https://www.opencerts.io/?q=%7B%22type%22%3A%22DOCUMENT%22%2C%22payload%22%3A%7B%22uri%22%3A%22https%3A%2F%2Fraw.githubusercontent.com%2FThomasWangWeiHong%2Fthomaswangweihong.github.io%2Fmain%2Fassets%2FO%2520-%2520Level%2520(Redacted-Encrypted)%2520OpenCert.opencert%22%7D%7D#%7B%22key%22%3A%22a77c9d040a983807272440b09bf634e77a3f251c83d5e2439f487ebd881196ee%22%7D">e-Certificate (Transcript) / 电子证书</a></li>
+						</div>
+						<div class="resume-item">
+							<h4>Primary School Leaving Examination Certificate / 小学毕业考试证书</h4>
+							<h5>1999 - 2004</h5>
+							<p><em><img src='assets/img/PPS Logo.jpg' style='width: 8%; height: 8%;'>&nbsp;&nbsp;Peiying Primary School, Singapore / 培英小学, 新加坡</em></p>
+							<ul>
+								<li><a href = "https://www.opencerts.io/?q=%7B%22type%22%3A%22DOCUMENT%22%2C%22payload%22%3A%7B%22uri%22%3A%22https%3A%2F%2Fraw.githubusercontent.com%2FThomasWangWeiHong%2Fthomaswangweihong.github.io%2Fmain%2Fassets%2FPSLE%2520(Redacted-Encrypted)%2520OpenCert.opencert%22%7D%7D#%7B%22key%22%3A%22d5031f1b6f38cdf00350f0fa783cb403a20387c0c073fd955245c2e81d4e723b%22%7D">e-Certificate (Transcript) / 电子证书</a></li>
+						</div>
 					</div>
 				</div>
 
