Updated Introduction Section

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						<img src="assets/img/Thomas Wang Wei Hong Alt.jpg" class="img-fluid" alt="">
 					</div>
 					<div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-						<h3>Software Engineer (软件工程师) / Data Scientist (数据科学家)</h3>
+						<h3>AI/ML Software Engineer (人工智能/机器学习软件工程师)</h3>
 						<br>
 						<!--
 						<p class="fst-italic">
@@ -145,11 +145,11 @@
 							</div>
 						</div>
 						<br>
-						<p>I am <strong>Thomas Wang Wei Hong</strong>, a dedicated <span class="secondary-emphasis">software engineer</span> with a penchant for pushing boundaries and exploring the unknown. I have been developing <span class="secondary-emphasis">proof-of-concept software</span>, and engaged in <strong>Research and Development (R&D)</strong> work in the field of <strong>computer vision</strong>.<br><br>
-						I am currently pursuing a <strong>Master of Science in Data Science and Machine Learning (MSc in DSML)</strong> degree at the <strong>National University of Singapore</strong> to further solidify my knowledge in the realm of <span class="secondary-emphasis">data science</span>, which will open up avenues of innovation and research that I am eager to explore.<br><br>
+						<p>I am <strong>Thomas Wang Wei Hong</strong>, a dedicated <span class="secondary-emphasis">software engineer</span> with a penchant for pushing boundaries and exploring the unknown. I have been developing <span class="secondary-emphasis">proof-of-concept software</span>, and engaged in <strong>Research and Development (R&D)</strong> work in the field of <strong>data science and machine learning</strong>, particularly in <strong>computer vision</strong>.<br><br>
+						I have completed the <strong>Master of Science in Data Science and Machine Learning (MSc in DSML)</strong> programme at the <strong>National University of Singapore</strong>, where I have further solidify my knowledge in the realm of <span class="secondary-emphasis">data science</span>, which will open up avenues of innovation and research that I am eager to explore.<br><br>
 						You can find me blazing down the off-road tracks of <span class="secondary-emphasis">Chestnut Nature Park</span> on my old but trusty mountain bike, or battling the heat and conquering the trails of <span class="secondary-emphasis">MacRitchie Reservoir Park</span>.</p>
 						<br>
-						<p>我是王惟弘，一名致力于探索未知的软件工程师。我热衷于开发应用软件，并在计算机视觉领域从事研究和开发（R&D）工作。 我目前正在新加坡国立大学攻读数据科学和机器学习的硕士学位（MSc in DSML），以进一步巩固我在数据科学领域的知识。 这将为我打开一条我很期待探索的创新和研究的新途径。 你可以在策士纳自然公园的越野轨道上一睹我骑着那旧而可靠的山地自行车飞驰的英姿，或是在炎热的天气下征服麦里芝蓄水池的丛林小路。</p>
+						<p>我是王惟弘，一名致力于探索未知的人工智能/机器学习软件工程师。我热衷于开发应用软件，并在数据科学于机器学习领域从事研究和开发（R&D）工作，尤其在计算机视觉领域。 我获得了新加坡国立大学数据科学与机器学习的硕士学位（MSc in DSML），并已进一步巩固我在数据科学领域的知识。 这将为我打开一条我很期待探索的创新和研究的新途径。 你可以在策士纳自然公园的越野轨道上一睹我骑着那旧而可靠的山地自行车飞驰的英姿，或是在炎热的天气下征服麦里芝蓄水池的丛林小路。</p>
 					</div>
 				</div>
 
