Fine Tuning of Self Introduction and Personal Details

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			<br>
 			<h1>王惟弘</h1>
 			<br>
-			<p>I am a <span class="typed" data-typed-items="Data Scientist in-the-making, Software Engineer who does it all"></span></p>
+			<p>I am a <span class="typed" data-typed-items="trained Data Scientist, AI/ML Software Engineer who does it all"></span></p>
 		</div>
 	</section><!-- End Hero -->
 
@@ -127,19 +127,17 @@
 						<div class="row">
 							<div class="col-lg-6">
 								<ul>
-									<li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>22nd November 1992</span></li>
 									<li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Singapore, Singapore</span></li>
 									<li><i class="bi bi-chevron-right"></i> <strong>Nationality:</strong> <span>Singapore Citizen</span></li>
-									<li><i class="bi bi-chevron-right"></i> <strong>Highest Education:</strong> <span>Master of Science (2024)</span></li>
+									<li><i class="bi bi-chevron-right"></i> <strong>Highest Education:</strong> <span>Master of Science</span></li>
 									<li><i class="bi bi-chevron-right"></i> <strong>Hobbies:</strong> <span>🚴 / 🏃 / 🥾 / 📚 / 💻 / 🎮</span></li>
 								</ul>
 							</div>
 							<div class="col-lg-6">
 								<ul>
-									<li><i class="bi bi-chevron-right"></i> <strong>出生日期:</strong> <span>1992 年 11 月 22 日</span></li>
 									<li><i class="bi bi-chevron-right"></i> <strong>城市:</strong> <span>新加坡, 新加坡</span></li>
 									<li><i class="bi bi-chevron-right"></i> <strong>国籍:</strong> <span>新加坡公民</span></li>
-									<li><i class="bi bi-chevron-right"></i> <strong>最高学历:</strong> <span>硕士 (2024)</span></li>
+									<li><i class="bi bi-chevron-right"></i> <strong>最高学历:</strong> <span>硕士</span></li>
 									<li><i class="bi bi-chevron-right"></i> <strong>爱好:</strong> <span>🚴 / 🏃 / 🥾 / 📚 / 💻 / 🎮</span></li>
 								</ul>
 							</div>
