Latest occupation update

--- a/index.html
+++ b/index.html
@@ -231,6 +231,12 @@
 
 						<h3 class="resume-title">Professional Experience / 专业经验</h3>
 						<div class="resume-item">
+							<h4>Research Engineer / 研究工程师</h4>
+							<h5>2024 - </h5>
+							<p><em><img src='assets/img/NERI_Logo.jpeg' style='width: 50%; height: 50%;'>&nbsp;&nbsp;NUS Environmental Research Institute</em></p>
+							<p><em>5A Engineering Drive 1, #02-03 T-Lab Building, Singapore / 新加坡国立大学, 新加坡</em></p>
+						</div>
+						<div class="resume-item">
 							<h4>AI/ML Software Engineer / 人工智能-机器学习软件工程师</h4>
 							<h5>2020 - 2023</h5>
 							<p><em><img src='assets/img/Occutrack Logo.png' style='width: 50%; height: 50%;'>&nbsp;&nbsp;Occutrack Medical Solutions Pte Ltd</em></p>
