Update NERI Logo File Type

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 						<div class="resume-item">
 							<h4>Research Engineer / 研究工程师</h4>
 							<h5>2024 - </h5>
-							<p><em><img src='assets/img/NERI_Logo.jpeg' style='width: 15%; height: 15%;'>&nbsp;&nbsp;NUS Environmental Research Institute</em></p>
+							<p><em><img src='assets/img/NERI Logo.png' style='width: 15%; height: 15%;'>&nbsp;&nbsp;NUS Environmental Research Institute</em></p>
 							<p><em>5A Engineering Drive 1, #02-03 T-Lab Building, Singapore / 新加坡国立大学, 新加坡</em></p>
 						</div>
 						<div class="resume-item">
